--- a/config.org
+++ b/config.org
@@ -8,7 +8,7 @@
 - [[#bootsraping-package-manager][BOOTSRAPING PACKAGE MANAGER]]
 - [[#emacs][EMACS]]
   - [[#changing-inner-emacs-default][Changing inner emacs default]]
-  - [[#change-built-in-packages][Change Built-In Packages]]
+  - [[#improving-emacs-default-actions][Improving emacs default actions]]
   - [[#savehist][Savehist]]
 - [[#graphical-user-interface-tweaks][GRAPHICAL USER INTERFACE TWEAKS]]
   - [[#change-font][Change Font]]
@@ -18,11 +18,17 @@
   - [[#projectile][Projectile]]
   - [[#perspective][Perspective]]
 - [[#ui][UI]]
+  - [[#line-numbers][Line numbers]]
   - [[#dashboard][Dashboard]]
   - [[#modeline][Modeline]]
   - [[#nerd-icons][Nerd icons]]
   - [[#theme][Theme]]
+  - [[#googles][Googles]]
+  - [[#smartparent][SmartParent]]
+- [[#navigation][NAVIGATION]]
+  - [[#dirvish][Dirvish]]
 - [[#orgmode][ORGMODE]]
+  - [[#org-modern][Org Modern]]
   - [[#enabling-table-of-contents][Enabling Table of Contents]]
   - [[#indent][Indent]]
   - [[#source-code-block-tag-expansion][Source code block tag expansion]]
@@ -31,6 +37,7 @@
   - [[#general-keybinding][General Keybinding]]
 - [[#search][SEARCH]]
   - [[#deadgrep][Deadgrep]]
+  - [[#silversearcher][SilverSearcher]]
 - [[#programming][PROGRAMMING]]
   - [[#eglot][Eglot]]
   - [[#completition][Completition]]
@@ -39,6 +46,7 @@
   - [[#lint][Lint]]
 - [[#language-specefic][LANGUAGE SPECEFIC]]
   - [[#javascript][Javascript]]
+  - [[#typescript][Typescript]]
   - [[#python][Python]]
   - [[#lua][Lua]]
   - [[#rust][Rust]]
@@ -73,35 +81,30 @@
 ** Changing inner emacs default
 #+begin_src emacs-lisp
 
-  ;; INTERNAL PACKAGES
-  (use-package emacs
-    :init
-    (setq completion-cycle-threshold 3)
-    (setq tab-always-indent 'complete)
-    (defun crm-indicator (args)
-      (cons (format "[CRM%s] %s"
-                  (replace-regexp-in-string
-                   "\\`\\[.*?]\\*\\|\\[.*?]\\*\\'" ""
-                   crm-separator)
-                  (car args))
-          (cdr args)))
-    (advice-add #'completing-read-multiple :filter-args #'crm-indicator)
-    (setq minibuffer-prompt-properties
-          '(read-only t cursor-intangible t face minibuffer-prompt))
-    (add-hook 'minibuffer-setup-hook #'cursor-intangible-mode)
-    (setq enable-recursive-minibuffers t)
+;; INTERNAL PACKAGES
+(use-package emacs
+  :init
+  (setq completion-cycle-threshold 3)
+  (setq tab-always-indent 'complete)
+  (setq enable-recursive-minibuffers t)
+  (setq next-line-add-newlines t))
 
 #+end_src
 
-** Change Built-In Packages
+** Improving emacs default actions
 #+begin_src emacs-lisp
+(use-package crux
+  :straight t)
 
-  (use-package paren
-    :init
-    (setq show-paren-delay 0)
-    :config
-    (show-paren-mode +1))
-
+(global-set-key [remap move-beginning-of-line] #'crux-move-beginning-of-line)
+(global-set-key (kbd "C-c o") #'crux-open-with)
+(global-set-key [(shift return)] #'crux-smart-open-line)
+(global-set-key [(ctrl shift return)] #'crux-smart-open-line-above)
+(global-set-key (kbd "C-c n") #'crux-clenup-buffer-or-region)
+(global-set-key (kbd "C-c f") #'crux-recentf-find-file)
+(global-set-key (kbd "C-c F") #'crux-recentf-find-directory)
+(global-set-key (kbd "C-<backspace>") #'crux-kill-line-backwards)
+(global-set-key [remap kill-whole-line] #'crux-kill-whole-linw)
 #+end_src
 
 ** Savehist
@@ -116,29 +119,29 @@
 ** Change Font
 #+begin_src emacs-lisp
 
-  (set-face-attribute 'default nil
-    :font "JetBrainsMono Nerd Font"
-    :height 110
-    :weight 'medium)
-  (set-face-attribute 'variable-pitch nil
-    :font "Arial"
-    :height 120
-    :weight 'medium)
-  (set-face-attribute 'fixed-pitch nil
-    :font "JetBrainsMono Nerd Font"
-    :height 110
-    :weight 'medium)
+   (set-face-attribute 'default nil
+     :font "JetBrainsMono Nerd Font"
+     :height 110
+     :weight 'medium)
+   (set-face-attribute 'variable-pitch nil
+     :font "Arial"
+     :height 120
+     :weight 'medium)
+   (set-face-attribute 'fixed-pitch nil
+     :font "JetBrainsMono Nerd Font"
+     :height 110
+     :weight 'medium)
 
-  ;; Makes commented text and keywords italics
-  (set-face-attribute 'font-lock-comment-face nil
-    :slant 'italic)
-  (set-face-attribute 'font-lock-keyword-face nil
-    :slant 'italic)
+   ;; Makes commented text and keywords italics
+   (set-face-attribute 'font-lock-comment-face nil
+     :slant 'italic)
+   (set-face-attribute 'font-lock-keyword-face nil
+     :slant 'italic)
 
-  ;; Default font on al graphical frames created after restarting Emacs
-  (add-to-list 'default-frame-alist '(font . "JetBrainsMono Nerd Font"))
+   ;; Default font on al graphical frames created after restarting Emacs
+   (add-to-list 'default-frame-alist '(font . "JetBrainsMono Nerd Font"))
 
-  (setq-default line-spacing 0.12)
+   (setq-default line-spacing 0.12)
 
 #+end_src
 
@@ -189,6 +192,14 @@
 #+end_src
 
 * UI
+
+** Line numbers
+#+begin_src emacs-lisp
+
+  (global-display-line-numbers-mode 1)
+  (global-visual-line-mode t)
+
+#+end_src
 
 ** Dashboard
 #+begin_src emacs-lisp
@@ -268,7 +279,43 @@
 
 #+end_src
 
+** Googles
+#+begin_src emacs-lisp
+(use-package goggles
+  :straight t
+  :hook ((prog-mode text-mode) . goggles-mode)
+  :config
+  (setq-default googles-pulse t))
+#+end_src
+
+** SmartParent
+#+begin_src emacs-lisp
+(use-package smartparens
+  :straight t)
+
+(add-hook 'prog-mode #'smartparents-strict-mode)
+#+end_src
+
+* NAVIGATION
+
+** Dirvish
+#+begin_src emacs-lisp
+(use-package dirvish
+  :straight t)
+
+(dirvish-override-dired-mode)
+#+end_src
+
 * ORGMODE
+
+** Org Modern
+#+begin_src emacs-lisp
+
+(use-package org-modern
+  :straight t
+  :init (with-eval-after-load 'org (global-org-modern-mode)))
+
+#+end_src
 
 ** Enabling Table of Contents
 #+begin_src emacs-lisp
@@ -292,11 +339,6 @@
 
 #+begin_src emacs-lisp
   (require 'org-tempo)
-
-  (add-hook 'org-mode-hook (lambda ()
-    (setq-local electric-pair-inhibit-predicate
-      `(lambda (c)
-         (if (char-equal c ?< t (,electric-pair-inhibit-predicate c))))))
 #+end_src
 
 * KEYBINDING
@@ -322,7 +364,6 @@
   (global-set-key (kbd "M-u") #'backward-word)
   (global-set-key (kbd "M-o") #'forward-word)
   (global-set-key (kbd "<f5>") #'deadgrep)
-  (global-set-key [escape] 'keyboard-escape-quit)
 
 #+end_src
 
@@ -336,6 +377,13 @@
 
 #+end_src
 
+** SilverSearcher
+#+begin_src emacs-lisp
+
+(use-package ag
+  :straight t)
+
+#+end_src
 * PROGRAMMING
 
 ** Eglot
@@ -378,40 +426,57 @@
 
 #+begin_src emacs-lisp
 
-  ;; Enable vertico
-  (use-package vertico
-    :straight t
-    :custom
-    (vertico-cycle t)
-    :init
-    (vertico-mode))
+;; Enable vertico
+(use-package vertico
+  :straight t
+  :custom
+  (vertico-cycle t)
+  :init
+  (vertico-mode))
 
-  (use-package orderless
-    :straight t
-    :init
-    (setq completion-styles '(orderless basic)
-          completion-category-defaults nil
-          completion-category-overrides '((file (styles partial-completion)))))
+(defun orderless-fast-dispatch (word index total)
+  (and (= index 0) (= total 1) (length< word 4)
+       `(orderless-regexp . ,(concat "^"(regexp-quote word)))))
+
+(use-package orderless
+  :straight t
+  :init
+  (setq completion-category-defaults nil
+        completion-category-overrides '((file (styles partial-completion)))))
+
+(orderless-define-completion-style orderless-fast
+  (orderless-style-dispatchers '(orderless-fast-dispatch))
+  (orderless-matching-styles '(orderless-literal orderless-regexp)))
+
+(setq completion-styles '(orderless-fast basic))
 
 #+end_src
 
 *** Code-completion framework
 #+begin_src emacs-lisp
 
-  (use-package corfu
-  :straight t
-  :custom
-  (corfu-cycle t)
-  (corfu-auto t)
-  (corfu-separator ?\s)
-  (corfu-quit-at-boundary nil)
-  (corfu-preview-current nil)
-  (corfu-preselect 'prompt)
-  (corfu-scroll-margin 5)
-  :init
-  (global-corfu-mode))
+(use-package corfu
+:straight t
+:custom
+(corfu-cycle t)
+(corfu-auto t)
+(corfu-auto-delay 1)
+(corfu-auto-prefix 2)
+(corfu-separator ?\s)
+(corfu-quit-at-boundary nil)
+(corfu-quit-no-match 'separator)
+(corfu-preview-current nil)
+(corfu-preselect 'prompt)
+(corfu-scroll-margin 5)
+:init
+(global-corfu-mode))
 
-)
+(use-package cape
+  :straight t
+  :init
+  (add-to-list 'completion-at-point-functions #'cape-dabbrev)
+  (add-to-list 'completion-at-point-functions #'cape-file)
+  (add-to-list 'completion-at-point-functions #'cape-elisp-block))
 
 #+end_src
 
@@ -437,21 +502,42 @@
 ** Lint
 #+begin_src emacs-lisp
 
-;;  (use-package flycheck
-;;    :straight t
-;;    :init (global-flycheck-mode))
+ (use-package flycheck
+   :straight t
+   :init (global-flycheck-mode))
 
 #+end_src
 
 * LANGUAGE SPECEFIC
 
 ** Javascript
+
+*** Configuration
 #+begin_src emacs-lisp
   (add-hook 'js-ts-mode-hook
 	  (lambda()
 	    (local-unset-key (kbd "M-."))))
 
   (setq js-indent-level 2)
+#+end_src
+
+*** JS2-Minor Mode
+#+begin_src emacs-lisp
+(use-package js2-mode
+  :straight t)
+
+(add-hook 'js-mode-hook 'js2-minor-mode)
+#+end_src
+
+** Typescript
+#+begin_src emacs-lisp
+(use-package tide
+  :straight t
+  :after (typescript-mode corfu flycheck)
+  :hook((typescript-mode . tide-setup)
+	(tsx-ts-mode. tide-setup)
+	(typescript-ts-mode . tide-hl-identifier-mode)
+	(before-save . tide-format-before-save)))
 #+end_src
 
 ** Python
@@ -474,11 +560,11 @@
     :straight t
     :defer t
     :custom
-    (blacken-allow-py36 t)
     (blacken-skip-string-normalization t)
-    (blacken-only-if-project-is-blackened t)
     (black-fast-unsafe t)
-    :hook (python-base-mode-hook . blacken-mode))
+    (blacken-line-length 90))
+    
+   (add-hook 'python-base-mode-hook  'blacken-mode)
 #+end_src
 
 ** Lua
@@ -517,19 +603,20 @@
 ** Eshell
 #+begin_src emacs-lisp
 
-  (use-package eshell-syntax-highlighting
-    :after esh-mode
-    :config
-    (eshell-syntax-highlighting-global-mode +1))
+(use-package eshell-syntax-highlighting
+  :straight t
+  :after esh-mode
+  :config
+  (eshell-syntax-highlighting-global-mode +1))
 
-  (setq eshell-rc-script (concat user-emacs-directory "eshell/profile")
-        eshell-aliases-file (concat user-emacs-directory "eshell/aliases")
-        eshell-history-size 5000
-        eshell-buffer-maximun-lines 5000
-        eshell-hist-ignoredups t
-        eshell-scroll-to-bottom-on-input t
-        eshell-destroy-buffer-when-process-dies t
-        eshell-visual-commands'("bash" "htop" "ssh" "top" "zsh"))
+(setq eshell-rc-script (concat user-emacs-directory "eshell/profile")
+      eshell-aliases-file (concat user-emacs-directory "eshell/aliases")
+      eshell-history-size 5000
+      eshell-buffer-maximun-lines 5000
+      eshell-hist-ignoredups t
+      eshell-scroll-to-bottom-on-input t
+      eshell-destroy-buffer-when-process-dies t
+      eshell-visual-commands'("bash" "htop" "ssh" "top" "zsh"))
 
 #+end_src
 
